2007-02-08  Brian Gough  <bjg@network-theory.co.uk>

	* linear_wrapper.c: convert multidimensional function to
	one-dimensional for line minimisation

	* linear_minimize.c: one-dimensional minimisation from Fletcher

	* vector_bfgs2.c: added Fletcher's implementation

2006-02-18  Brian Gough  <bjg@network-theory.co.uk>

	* vector_bfgs.c (vector_bfgs_iterate): avoid division by zero if
	dxdg == 0

2003-07-24  Brian Gough  <bjg@network-theory.co.uk>

	* simplex.c (nmsimplex_set): changed index variable i from int to
	size_t

2003-04-17  Brian Gough  <bjg@network-theory.co.uk>

	* simplex.c (nmsimplex_iterate): bug fix to find the second
	highest point correctly

	* vector_bfgs.c (vector_bfgs_iterate): no need to update g0norm on
	each downhill step, since g0norm is the norm for the initial
	gradient.

	* conjugate_pr.c (conjugate_pr_iterate): no need to update g0norm
	on each downhill step, since g0norm is the norm for the initial
	gradient.

	* conjugate_fr.c (conjugate_fr_iterate): no need to update g0norm
	on each downhill step, since g0norm is the norm for the initial
	gradient.

Sun Sep 30 20:50:00 2002  Tuomo Keskitalo  <tkeskita@pt.hut.fi>

	* Added Nelder-Mead Simplex optimization algorithm and 
	fminimizer structure.

Sun Feb 10 21:57:36 2002  Brian Gough  <bjg@network-theory.co.uk>

	* conjugate_pr.c (conjugate_pr_iterate): return error ENOPROG if
 	cannot find downward step

	* conjugate_fr.c (conjugate_fr_iterate): return error ENOPROG if
 	cannot find downward step

	* vector_bfgs.c (vector_bfgs_iterate): return error ENOPROG if
 	cannot find downward step

Thu Oct 25 11:56:06 2001  Brian Gough  <bjg@network-theory.co.uk>

	* added a tolerance parameter for the line minimizations

Wed Oct 24 23:18:46 2001  Brian Gough  <bjg@network-theory.co.uk>

	* modified all routines to use a single minimiztion iteration,
 	instead of nested iterations for line and gradient search.

Thu Oct 18 22:56:52 2001  Brian Gough  <bjg@network-theory.co.uk>
