@@ -1,3 +1,7 @@
+2007-02-14  Brian Gough  <bjg@network-theory.co.uk>
+
+	* mathieu_charv.c: made solve_cubic static
+
 2007-02-12  Brian Gough  <bjg@network-theory.co.uk>
 
 	* mathieu_charv.c (figi): ensure that e[ii] is set when
