@@ -1,3 +1,9 @@
+2007-02-14  Brian Gough  <bjg@network-theory.co.uk>
+
+	* linear_minimize.c: made all functions static
+
+	* linear_wrapper.c: made all functions static
+
 2007-02-08  Brian Gough  <bjg@network-theory.co.uk>
 
 	* linear_wrapper.c: convert multidimensional function to
